--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,75 @@
     margin: 10px 10px 10px 10px;    
     width: 90%; 
 }
+.contactus {
+    background: #141414;  
+    padding: 40px 15px 40px 15px;
+    display: flex;  
+    flex-direction: column;   
+    align-items: center;
+    width: 100%;    
+         
+
+}
+.contactus__h2 {
+    color: #006241;
+    text-align: center;
+    font-size: 32px;
+    margin-bottom: 25px; 
+
+}
+.contactus__form {
+    background: #006241;
+    padding: 15px; 
+    width: 285px;   
+
+}
+.contactus__label {
+    color: #fff;
+    font-size: 14px;
+    display: flex;
+    flex-direction: column;  
+    width: 90%; 
+    margin-top: 5px;
+    padding: 5px 2px 5px 2px;
+    border-radius: 10px;
+    border: 0;  
+
+}
+.contactus__input {
+    color: #fff; 
+    font-size: 14px;
+    display: flex;
+    flex-direction: column;   
+    width: 90%; 
+    margin-top: 10px;
+    padding: 5px 2px 5px 2px;
+    border-radius: 10px; 
+    border: 0;     
+}
+.contactus__input::placeholder {
+    font-size: 12px;
+    color: #006241; 
+    font-weight: bold;
+}
+.contactus__input:focus {
+    color: #fff;     
+    background: #000;
+  
+}
+
+.contactus__button {
+    background: inherit;
+    border: 2px solid #fff;
+    color: #fff;
+    width: 45%;  
+    height: 30px;   
+    border-radius: 7.5px;  
+    margin-top: 15px;   
+    padding: 4px ;   
+    transition: all 1s;    
+}
+.contactus__button:hover {
+    background: #d8f007;
+    border: #d8f007;
+}
