--- a/css/style.css
+++ b/css/style.css
@@ -220,3 +220,39 @@
     background: #d8f007;
     border: #d8f007;
 }
+.footer {
+    background: #000;
+    padding: 25px 15px 25px 15px;   
+
+}
+.footer__conteiner-link-izq {
+    display: flex;
+    flex-direction: column;
+
+}
+.footer__likn-izq {
+    color: #006241;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bolder;
+
+}
+.footer__conteiner-link-rs {
+    margin-top: 25px;
+    margin-bottom: 10px;   
+    width: 120px; 
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+.footer__conteiner-link-rs i {
+    color: #006241;
+    font-size: 20px;
+    margin-left: 15px;
+}
+.footer__link-der {
+    color: #09aa00;
+    text-decoration: none;
+
+}
